# objectiveai

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
objectiveai-api/: Cargo.toml
objectiveai-ensemble/: Cargo.toml
objectiveai-ensemble-js/: Cargo.toml
objectiveai-github-discord-notifier/: cloudbuild.yaml
objectiveai-js/: package-lock.json  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsup.config.ts
objectiveai-rs/: Cargo.toml
objectiveai-rs-wasm-js/: Cargo.toml
objectiveai-web/: Dockerfile  cloudbuild.yaml  package-lock.json  package.json
objectiveai-web-new/: package.json
objectiveai/objectiveai/: Cargo.toml
objectiveai/objectiveai/src/: lib.rs  prefixed_uuid.rs
objectiveai/objectiveai/src/auth/: api_key.rs  mod.rs  response.rs
objectiveai/objectiveai/src/chat/completions/request/: message.rs
objectiveai/objectiveai/src/functions/: function.rs  task.rs
objectiveai/objectiveai/src/functions/compute_profile/request/: request.rs
objectiveai/objectiveai/src/functions/compute_profile/response/streaming/: function_compute_profile_chunk.rs
objectiveai/objectiveai/src/functions/compute_profile/response/unary/: function_compute_profile.rs  function_execution.rs
objectiveai/objectiveai/src/functions/executions/request/: body.rs  request.rs
objectiveai/objectiveai/src/functions/expression/: params.rs  runtime.rs
objectiveai/objectiveai/src/vector/completions/request/: vector_completion_create_params.rs
objectiveai/objectiveai/src/vector/completions/response/: vote.rs
(+64 files in other folders)
