[package]
name = "objectiveai"
version = "0.1.0"
edition = "2024"

[dependencies]
base62 = { version = "2.2.1" }
serde = { version = "1.0.219", features = ["derive"] }
indexmap = { version = "2.2.3", features = ["serde"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
twox-hash = { version = "2.1.1", default-features = false, features = ["xxhash3_128", "alloc"] }
rust_decimal = { version = "1.39.0", features = ["macros", "serde-float", "rand"] }
jmespath = { version = "0.4.0" }
thiserror = {  version = "2.0.12" }
base64 = { version = "0.22.1" }
chrono = { version = "=0.4.39", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
